directive header sidebar

--- a/site-seed/app/views/main.html
+++ b/site-seed/app/views/main.html
@@ -1,5 +1,9 @@
 <div id="wrapper">
 
+    <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+        <header></header>
+        <sidebar></sidebar>
+    </nav>
     <div id="page-wrapper" style="min-height: 561px;">
         <div ui-view></div>
 
