--- a/site-seed/app/views/sidebar/sidebar.html
+++ b/site-seed/app/views/sidebar/sidebar.html
@@ -16,16 +16,13 @@
                 <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
             </li>
             <li ng-click="check(1)">
-                <a href="#"><i class="fa fa-users fa-fw"></i> UI Elements<span class="fa arrow"></span></a>
+                <a href="#"><i class="fa fa-users fa-fw"></i> Users<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level" ng-class="{collapse: collapse != 1}">
                     <li>
-                        <a href="panels-wells.html">Panels and Wells</a>
+                    <a href="#"><i class="fa fa-plus fa-fw"></i> New User</a>
                     </li>
                     <li>
-                        <a href="buttons.html">Buttons</a>
-                    </li>
-                    <li>
-                        <a href="notifications.html">Notifications</a>
+                        <a href="#">List User</a>
                     </li>
                 </ul>
                 <!-- /.nav-second-level -->
