--- a/site-seed/app/views/pages/login.html
+++ b/site-seed/app/views/pages/login.html
@@ -10,9 +10,8 @@
                     <form name="form" ng-submit="vm.login()" role="form">
                         <fieldset>
                             <div class="form-group" ng-class="{ 'has-error': form.username.$dirty && form.username.$invalid }">
-                                <input type="email" placeholder="Username is an email" name="username" id="username" class="form-control" ng-model="vm.username" required />
+                                <input type="text" placeholder="Username" name="username" id="username" class="form-control" ng-model="vm.username" required />
                                 <span ng-show="form.username.$dirty && form.username.$error.required" class="help-block">Username is required</span>
-                                <span ng-show="form.username.$dirty && form.username.$error.email" class="help-block">Username is an email</span>
                             </div>
                             <div class="form-group" ng-class="{ 'has-error': form.password.$dirty && form.password.$error.required }">
                                 <input type="password" placeholder="Password" name="password" id="password" class="form-control" ng-model="vm.password" required />
