--- a/site-seed/app/views/pages/login.html
+++ b/site-seed/app/views/pages/login.html
@@ -9,6 +9,9 @@
                     <div ng-show="vm.error" class="alert alert-danger">{{vm.error}}</div>
                     <form name="form" ng-submit="vm.login()" role="form">
                         <fieldset>
+                            <div class="form-group">
+                                <a ui-sref="register"><span><em><u>Register a new account!</u></em></span></a>
+                            </div>
                             <div class="form-group" ng-class="{ 'has-error': form.username.$dirty && form.username.$invalid }">
                                 <input type="text" placeholder="Username" name="username" id="username" class="form-control" ng-model="vm.username" required />
                                 <span ng-show="form.username.$dirty && form.username.$error.required" class="help-block">Username is required</span>
